Add *.pyc to git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 head/sandbox/tc_val
 head/sandbox/temp
-Sites/__pycache__
 Sites/.idea
 .idea
-Sites/DataContracts/__pycache__
 *.icloud
+*.pyc
+__pycache__
